# nanotodo

./: README.md
backend/express+prisma/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
backend/express+prisma/prisma/: schema.prisma
backend/express+prisma/src/: main.ts
backend/shuttle+axum+sqlx/: Cargo.toml  README.md
backend/shuttle+axum+sqlx/migrations/: 0001_init.sql
backend/shuttle+axum+sqlx/src/: main.rs
frontend/vite+shadcnui/: package-lock.json  package.json
frontend/vite+shadcnui/src/: App.tsx
frontend/vite+shadcnui/src/types/: task.ts
